--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-  <div class="card card-custom">
+  <div class="card">
     <div class="row">
       <h1 class="pull-left"><%= @owner.name %></h1>
       <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
