--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,20 @@
 <%= content_tag(:div, nil, class: "card small-fix-box #{small_box_classes}") do %>
-  <h2>Reset password</h2>
+  <center>
+    <h2 class="text-center">reset password</h2>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true %>
-    </div>
+      <div class="field col-xs-10 col-xs-offset-1">
+        <%= f.email_field :email, autofocus: true, placeholder: "email" %>
+      </div>
+      <br><br>
 
-    <div class="actions">
-      <center>
-        <%= f.submit 'Send reset password email', :class => 'btn btn-primary' %>
-      </center>
-    </div>
-  <% end %>
+        <%= f.submit 'Send email', class: 'btn btn-primary' %>
 
-  <%= render "devise/shared/links" %>
+
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+  </center>
 <% end %>
