--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <center>
-  <h1>what's going on
+  <h1 class="whats-going-on">what's going on
     <div class="btn-group">
-      <button class="dropdown-toggle pretty-font" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="dropdown-toggle pretty-font day-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <%= Event.today_or(@selected_day.to_s) %>
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
       </button>
@@ -9,7 +9,6 @@
         <%= day_link_list %>
       </div>
     </div>
-    <%# link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless @view_is_today %>
   </h1>
 </center>
 
