--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
     <ul class="nav navbar-nav nav-links">
       <% if user_signed_in? && current_user.owner? %>
         <%= content_tag :li do link_to "new event", new_event_path, class: "mast-text" end %>
-        <%= content_tag :li do link_to "my profile", user_path(current_user.id), class: "mast-text" end %>
+        <%= content_tag :li do link_to "profile", user_path(current_user.id), class: "mast-text" end %>
       <% end %>
       <%= content_tag :li do link_to "login", new_user_session_path, class: "mast-text" end if !user_signed_in? %>
       <%= content_tag :li do link_to "logout", destroy_user_session_path, :method => :delete, class: "mast-text" end if user_signed_in? %>
