--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,33 @@
-<h2>Sign up</h2>
+<%= content_tag(:div, nil, class: "card small-fix-box #{small_box_classes}") do %>
+  <center>
+    <h2>Business Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.text_field :name, autofocus: true, :placeholder => "Name" %>
-  </div>
+      <div class="field">
+        <%= f.text_field :name, autofocus: true, :placeholder => "Name" %>
+      </div>
 
-  <div class="field">
-    <%= f.email_field :email, autofocus: true, :placeholder => "Email" %>
-  </div>
+      <div class="field">
+        <%= f.email_field :email, autofocus: true, :placeholder => "Email" %>
+      </div>
 
-  <div class="field">
-    <% if @minimum_password_length %>
+      <div class="field">
+        <% if @minimum_password_length %>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "off", :placeholder => "Password (6 characters minimum)" %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Confirm password" %>
+      </div>
+
+      <%= f.submit "Sign up", class: "btn btn-default"%>
+
+     <div>
+        <%= render "devise/shared/links" %>
+      </div>
     <% end %>
-    <%= f.password_field :password, autocomplete: "off", :placeholder => "Password (6 characters minimum)" %>
-  </div>
-
-  <div class="field">
-    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Confirm password" %>
-  </div>
-
-  <%= f.submit "Sign up", class: "btn btn-default"%>
-
- <div>
-    <%= render "devise/shared/links" %>
-  </div>
+  </center>
 <% end %>
