--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,53 +1,71 @@
-  <div class="card">
-    <div class="row">
-      <h1 class="pull-left"><%= @owner.name %></h1>
-      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
-    </div>
+<%= content_tag(:div, class: "card admin-card") do %>
+    <h4>Admin</h4>
+    <p>
+      Sign ins: <%= @owner.sign_in_count.to_s %><br/>
+      Last online: <%= @owner.last_sign_in_at ? "#{time_ago_in_words(@owner.last_sign_in_at)} ago" : "never" %><br/><br/>
 
-    <p><%= @owner.description %></p>
 
-    <center><h4 class="pretty-font">Events</h4></center>
-    <ul class="nav nav-tabs nav-justified">
-      <li class="active"><a data-toggle="tab" href="#todays">Today</a></li>
-      <li><a data-toggle="tab" href="#weekly_events">Weekly</a></li>
-      <li><a data-toggle="tab" href="#one_time_events">One Time</a></li>
-      </ul>
+      Events<br/>
+      Weekly: <%= @weekly_event_count %><br/>
+      One-time:  <%= @upcoming_one_time_count %> upcoming
+      (<%= @past_one_time_count %> past)<br/><br/>
 
-    <br /><br />
+      <%= form_for(@owner, path: update_user_path, html: { method: :patch }) do |f| %>
+        <%= f.select(:approved_status, User.approved_statuses.keys.map {|c| [c.titleize, c]}) %><br/><br/>
+        <%= f.submit "Update" %>
+      <% end %>
+    </p>
+<% end if @admin_view %>
 
-    <div class="tab-content">
-      <div id="todays" class="tab-pane fade in active">
-        <%= render_event_list(@active_events, :today) %>
-
-        <% if @active_events.empty? %>
-          <center>
-            <h2><small>no active events</small></h2>
-          </center>
-        <% end %>
-
-        <% if @inactive_events.any? %>
-          <center><h4 class="pretty-font">Past</h4></center>
-          <%= render_event_list(@inactive_events, :today) %>
-        <% end %>
-      </div>
-      <div id="weekly_events" class="tab-pane fade">
-        <% if @weekly_events.any? %>
-          <%= render_event_list(@weekly_events, :weekly_type) %>
-        <% else %>
-          <center>
-            <h2><small>no weekly events</small></h2>
-          </center>
-        <% end %>
-      </div>
-      <div id="one_time_events" class="tab-pane fade">
-        <% if @one_time_events.any? %>
-          <%= render_event_list(@one_time_events, :one_time_type) %>
-        <% else %>
-          <center>
-            <h2><small>no one time events</small></h2>
-          </center>
-        <% end %>
-      </div>
-    </div>
-
+<div class="card">
+  <div class="row">
+    <h1 class="pull-left"><%= @owner.name %></h1>
+    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
   </div>
+
+  <p><%= @owner.description %></p>
+
+  <center><h4 class="pretty-font">Events</h4></center>
+  <ul class="nav nav-tabs nav-justified">
+    <li class="active"><a data-toggle="tab" href="#todays">Today</a></li>
+    <li><a data-toggle="tab" href="#weekly_events">Weekly</a></li>
+    <li><a data-toggle="tab" href="#one_time_events">One Time</a></li>
+    </ul>
+
+  <br /><br />
+
+  <div class="tab-content">
+    <div id="todays" class="tab-pane fade in active">
+      <%= render_event_list(@active_events, :today) %>
+
+      <% if @active_events.empty? %>
+        <center>
+          <h2><small>no active events</small></h2>
+        </center>
+      <% end %>
+
+      <% if @inactive_events.any? %>
+        <center><h4 class="pretty-font">Past</h4></center>
+        <%= render_event_list(@inactive_events, :today) %>
+      <% end %>
+    </div>
+    <div id="weekly_events" class="tab-pane fade">
+      <% if @weekly_events.any? %>
+        <%= render_event_list(@weekly_events, :weekly_type) %>
+      <% else %>
+        <center>
+          <h2><small>no weekly events</small></h2>
+        </center>
+      <% end %>
+    </div>
+    <div id="one_time_events" class="tab-pane fade">
+      <% if @one_time_events.any? %>
+        <%= render_event_list(@one_time_events, :one_time_type) %>
+      <% else %>
+        <center>
+          <h2><small>no one time events</small></h2>
+        </center>
+      <% end %>
+    </div>
+  </div>
+</div>
