--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,11 +17,9 @@
     </p>
 <% end if @admin_view %>
 
+<h1 class="text-center"><%= @owner.name %></h1>
 <div class="card">
-  <div class="row">
-    <h1 class="pull-left"><%= @owner.name %></h1>
-    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
-  </div>
+  <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
 
   <p><%= @owner.description %></p>
 
