formatting and demo data pulled into rake task

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/admin_main_panel', view: @admin_view %>
+
 <center>
   <h1 class="whats-going-on">what's going on
     <div class="btn-group">
