--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-10 col-md-offset-1">
 
   <% if @admin_view %>
-    <h2 class="pretty-font">waiting for approval</h2>
+    <h2 class="pretty-font text-center">waiting for approval</h2>
     <% @unapproved_owners.each_with_index do |o, index| %>
       <%= render 'owner_card', owner: o, index: index, admin_view: @admin_view, link_to_path: user_path(o) %>
     <% end %>
@@ -13,5 +13,7 @@
     <%= render 'owner_card', owner: o, index: index, admin_view: @admin_view, link_to_path: user_path(o) %>
   <% end %>
 
-  <%= content_tag(:h2, "no venues available") if @owners.empty? %>
+  <%= content_tag(:h2, class: "text-center") do %>
+    <small>no venues available</small>
+  <% end if @owners.empty? %>
 </div>
