--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,16 @@
-<%= content_tag(:div, nil, class: "card small-fix-box #{small_box_classes}") do %>
+<%= content_tag(:div, nil, class: "card small-fix-box sign-up-card col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-6 col-xs-12 ") do %>
+  <h2 class="pretty-font text-center">Welcome to Shindig</h4>
+  <p style="font-size:22px;">
+    1. Complete the sign up form<br />
+    2. Confirm your email<br />
+    3. Create your business' profile<br />
+    4. Get approved<br />
+    5. Go live!<br />
+  </p>
+<% end %>
+
+
+<%= content_tag(:div, nil, class: "card small-fix-box sign-up-card col-lg-4 col-md-4 col-sm-6 col-xs-12") do %>
   <center>
     <h2>Business Sign up</h2>
 
