--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,4 +3,4 @@
 </h2>
 
 <br>
-<%= render 'shared/event_card', event_card_view_options(:event_show, { event: @event, edit_mode: @edit_mode }) %>
+<%= render 'shared/event_card', event_card_view_options(:show, { event: @event, edit_mode: @edit_mode }) %>
