--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,22 +35,16 @@
 
   <div class="tab-content">
     <div id="todays" class="tab-pane fade in active">
-      <%= render_event_list(@active_events, :today) %>
-
-      <% if @active_events.empty? %>
-        <center>
-          <h2><small>no active events</small></h2>
-        </center>
-      <% end %>
+      <%= render_event_list(@active_events, :owner_today) %>
 
       <% if @inactive_events.any? %>
         <center><h4 class="pretty-font">Past</h4></center>
-        <%= render_event_list(@inactive_events, :today) %>
+        <%= render_event_list(@inactive_events, :owner_today) %>
       <% end %>
     </div>
     <div id="weekly_events" class="tab-pane fade">
       <% if @weekly_events.any? %>
-        <%= render_event_list(@weekly_events, :weekly_type) %>
+        <%= render_event_list(@weekly_events, :owner_weekly) %>
       <% else %>
         <center>
           <h2><small>no weekly events</small></h2>
@@ -59,7 +53,7 @@
     </div>
     <div id="one_time_events" class="tab-pane fade">
       <% if @one_time_events.any? %>
-        <%= render_event_list(@one_time_events, :one_time_type) %>
+        <%= render_event_list(@one_time_events, :owner_one_time) %>
       <% else %>
         <center>
           <h2><small>no one time events</small></h2>
