cleanup from last commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       <% end %>
 
-      <div <%= "class=container".html_safe unless wide_page? %>>
+      <div class="container">
         <%= yield %>
       </div>
     </div>
