--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="navbar-header">
     <%= link_to root_url, class: "navbar-brand" do %>
-      <%= image_tag "shindig.png", class: "main-logo" %>
+      <%= image_tag "appyhr.png", class: "main-logo" %>
     <% end %>
     <% unless hidden_ham? %>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
