--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
       <%= devise_error_messages! %>
 
       <div class="field">
-        <%= f.text_field :name, autofocus: true, :placeholder => "Name" %>
+        <%= f.text_field :name, autofocus: true, :placeholder => "Business Name" %>
       </div>
 
       <div class="field">
